<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.dynamicmessenger.authorization.viewModels.PersonLoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/verificationCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edittext_blue_underline"
            android:ems="10"
            android:hint="@string/enter_code"
            android:inputType="number"
            android:text="@={viewModel.userEnteredCode}"
            app:setEditTextBackground="@{viewModel.isCodeValid}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customGradientView5" />

        <TextView
            android:id="@+id/loginRegisterTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="140dp"
            android:layout_marginEnd="32dp"
            android:textSize="24sp"
            tools:text="@string/login"
            app:loginRegisterTextChange="@{viewModel.isEmailExist}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/resendVerificationCodeTextView"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:text="@string/resend_code"
            android:onClick="@{viewModel::resendVerificationCode}"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="@+id/verificationCode"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/verificationCode"
            app:layout_constraintVertical_bias="0.039" />

        <Button
            android:id="@+id/button"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="110dp"
            android:background="@drawable/enable_button_design"
            android:text="@string/continue_button"
            app:setContinueButtonConfiguration="@{viewModel.isCodeValid}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <com.example.dynamicmessenger.customViews.CustomGradientView
            android:id="@+id/customGradientView5"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:downEndColor="@color/GradientEndColor"
            app:downStartColor="@color/GradientStartColor"
            app:endColor="@color/GradientEndColorDark"
            app:isTopView="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startColor="@color/GradientStartColorDark" />

        <com.example.dynamicmessenger.customViews.CustomGradientView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:downEndColor="@color/GradientEndColor"
            app:downStartColor="@color/GradientStartColor"
            app:endColor="@color/GradientEndColorDark"
            app:isTopView="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:startColor="@color/GradientStartColorDark" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateDrawable="@drawable/progress_bar"
            android:visibility="invisible"
            app:setProgressBarVisible="@{viewModel.progressBarVisibility}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/verificationCodeHintTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="40dp"
            android:text="@string/verification_code"
            android:textSize="12sp"
            android:visibility="visible"
            app:setTextViewVisible="@{viewModel.hintVisibility}"
            app:setHintColour="@{viewModel.isCodeValid}"
            app:layout_constraintBottom_toBottomOf="@+id/verificationCode"
            app:layout_constraintStart_toStartOf="@+id/verificationCode"
            app:layout_constraintTop_toTopOf="@+id/verificationCode" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>