<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="registrationViewModel"
            type="com.example.dynamicmessenger.authorization.viewModels.PersonRegistrationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="140dp"
            android:layout_marginEnd="32dp"
            android:text="@string/registration"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Spinner
                android:id="@+id/spinnerUniversity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:inputType="textPersonName"/>

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/name"/>

            <EditText
                android:id="@+id/editTextLastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/last_name"/>

            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/username"/>
        </LinearLayout>

        <Button
            android:id="@+id/continueButton"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="110dp"
            android:background="@drawable/disable_button_design"
            android:enabled="false"
            android:text="@string/continue_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.example.dynamicmessenger.customViews.CustomGradientView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:downEndColor="@color/GradientEndColor"
            app:downStartColor="@color/GradientStartColor"
            app:endColor="@color/GradientEndColorDark"
            app:isTopView="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startColor="@color/GradientStartColorDark" />

        <com.example.dynamicmessenger.customViews.CustomGradientView
            android:id="@+id/customGradientView4"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:downEndColor="@color/GradientEndColor"
            app:downStartColor="@color/GradientStartColor"
            app:endColor="@color/GradientEndColorDark"
            app:isTopView="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:startColor="@color/GradientStartColorDark" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:indeterminateDrawable="@drawable/progress_bar"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/skipButton"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:background="#00FFFFFF"
            android:text="@string/skip"
            android:textColor="#CFCFCF"
            app:layout_constraintBottom_toBottomOf="@+id/customGradientView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/continueButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>